Rough idea done, sort of

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <h1>A List of Interests</h1>
-        
+        <h1>Best Nicolas Cage Movies</h1>
+        <section>
+            <div>
+                <form>
+                    <p>
+                        <label for="interest">Interest</label>
+                        <input type="text" name="interest"></input>
+                    </p>
+                </form>
+            </div>
+        </section>
+        <img src="https://assets.vice.com/content-images/contentimage/no-slug/818a08affe6199d37b000102dc5cb930.jpg"/>
+        <!--p>This is some text</p>
+        <p>This is some text</p>
+        <p class="special">This is special, y'all</p>
+        <p>This isn't</p>
+        <p class="special">This is special</p>
+        <div class="special">Not a paragraph</div-->
     </body>
 </html>
