started a javascript file

--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
                         <label for="interest">Interest</label>
                         <input type="text" name="interest"></input>
                     </p>
+                    <p>
+                        <button type="submit">Add To List!</button>
+                    </p>
                 </form>
             </div>
         </section>
-        <img src="https://assets.vice.com/content-images/contentimage/no-slug/818a08affe6199d37b000102dc5cb930.jpg"/>
-        <!--p>This is some text</p>
-        <p>This is some text</p>
-        <p class="special">This is special, y'all</p>
-        <p>This isn't</p>
-        <p class="special">This is special</p>
-        <div class="special">Not a paragraph</div-->
+        <img src="http://akns-images.eonline.com/eol_images/Entire_Site/2015120/rs_560x493-150220154526-1024.nicolas-cage.jpg"/>
+        <script src="index.js"></script>
     </body>
 </html>
