--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
         <h1>Best Nicolas Cage Movies</h1>
         <section>
             <div>
-                <form>
+                <form id="cageMovies">
                     <p>
-                        <label for="interest">Interest</label>
-                        <input type="text" name="interest"></input>
+                        <label for="cageMovies">Your Favorite</label>
+                        <input type="text" name="cageMovies"></input>
                     </p>
                     <p>
                         <button type="submit">Add To List!</button>
                     </p>
                 </form>
+            </div>
+            <div id="details">
+
             </div>
         </section>
         <img src="http://akns-images.eonline.com/eol_images/Entire_Site/2015120/rs_560x493-150220154526-1024.nicolas-cage.jpg"/>
