--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Project 2: List Stuff</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Best Nicolas Cage Movies</h1>
@@ -14,7 +16,11 @@
                 <form id="cageMovies">
                     <p>
                         <label for="cageMovies">Your Favorite</label>
-                        <input type="text" name="cageMovies"></input>
+                        <input type="text" name="cageMovies">
+                    </p>
+                    <p>
+                        <label for="anotherMovie">Your Next Favorite</label>
+                        <input type="text" name="anotherMovie">
                     </p>
                     <p>
                         <button type="submit">Add To List!</button>
