--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
                         <input type="text" name="cageMovies">
                     </p>
                     <p>
-                        <label for="anotherMovie">Your Next Favorite</label>
+                        <label for="anotherMovie">Your Favorite</label>
                         <input type="text" name="anotherMovie">
                     </p>
                     <p>
                         <button type="submit">Add To List!</button>
+                    </p>
+                    <p>
+                        <button type="submit">Remove From List</button>
                     </p>
                 </form>
             </div>
