--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
         <link rel="stylesheet" href="index.css">
+        <style>
+        * {
+            font-family: 'Algerian','Helvetica';
+            color: indigo;
+            }
+        </style>
     </head>
     <body>
         <h1>Best Nicolas Cage Movies</h1>
@@ -17,10 +23,6 @@
                     <p>
                         <label for="cageMovies">Your Favorite</label>
                         <input type="text" name="cageMovies">
-                    </p>
-                    <p>
-                        <label for="anotherMovie">Your Favorite</label>
-                        <input type="text" name="anotherMovie">
                     </p>
                     <p>
                         <button type="submit">Add To List!</button>
