--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="index.css">
         <style>
         * {
-            font-family: 'Algerian','Helvetica';
+            font-family: 'Times New Roman';
+            font-size: 25;
             color: indigo;
             }
         </style>
